--- a/module/Device/view/device/device/index.phtml
+++ b/module/Device/view/device/device/index.phtml
@@ -5,6 +5,15 @@ $session = new Container('User');
 
  $title = 'My Paper';
  $this->headTitle($title);
+ if($session->is_admin == '1'){ 
+          echo $session->is_admin; ?>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'edit', 'id' => $device->id));?>">Edit</a>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'delete', 'id' => $device->id));?>">Delete</a>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'add'));?>">Add new device</a>
+    };
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
  <p>
@@ -30,13 +39,3 @@ $session = new Container('User');
  <?php endforeach; ?>
  
  </table>
-     
-      <?php if($session->is_admin == '1'){ ?>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'edit', 'id' => $device->id));?>">Edit</a>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'delete', 'id' => $device->id));?>">Delete</a>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'add'));?>">Add new device</a>
-
-        <?php }; ?>
