--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -39,7 +39,9 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                    </ul>
+                         <li class="active"><a href="<?php echo $this->url('auth') ?>"><?php echo $this->translate('SignIn') ?></a></li>
+                         <li class="active"><a href="<?php echo $this->url('signup') ?>"><?php echo $this->translate('SignUp') ?></a></li>
+                                         </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
