--- a/module/Device/view/device/device/index.phtml
+++ b/module/Device/view/device/device/index.phtml
@@ -3,17 +3,9 @@ use Zend\Session\Container;
 
 $session = new Container('User');
 
- $title = 'My Paper';
+ $title = 'Paper Available';
  $this->headTitle($title);
- if($session->is_admin == '1'){ 
-          echo $session->is_admin; ?>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'edit', 'id' => $device->id));?>">Edit</a>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'delete', 'id' => $device->id));?>">Delete</a>
-         <a href="<?php echo $this->url('device',
-             array('action'=>'add'));?>">Add new device</a>
-    };
+ 
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
  <p>
@@ -25,6 +17,7 @@ $session = new Container('User');
      <th>Theme</th>
      <th>Lien</th>
      <th>Journal</th>
+     <th>Add me</th>
      <th>&nbsp;</th>
  </tr>
  <?php foreach ($devices as $device) : ?>
@@ -33,9 +26,22 @@ $session = new Container('User');
      <td><?php echo $this->escapeHtml($device->theme);?></td>
      <td><?php echo $this->escapeHtml($device->lien);?></td>
      <td><?php echo $this->escapeHtml($device->journal);?></td>
+      <td><?php  print $session->is_admin;?></td>
+     
  </tr>    
        
  
  <?php endforeach; ?>
  
  </table>
+     
+      <?php if($session->is_admin == '1'){ 
+          print $session->is_admin; ?>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'edit', 'id' => $device->id));?>">Edit</a>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'delete', 'id' => $device->id));?>">Delete</a>
+         <a href="<?php echo $this->url('device',
+             array('action'=>'add'));?>">Add new device</a>
+
+      <?php }
