--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,4 +1,13 @@
-<?php echo $this->doctype(); ?>
+<?php
+
+use Zend\Session\Container;
+
+
+
+$session = new Container('User'); 
+
+echo $this->doctype(); 
+?>
 
 <html lang="en">
     <head>
@@ -39,8 +48,22 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                        <?php if(empty($session->email))
+                        {
+                            print_r("test co");
+                             print_r($session->email);
+                            ?>
+                            
+                        
                          <li class="active"><a href="<?php echo $this->url('auth') ?>"><?php echo $this->translate('SignIn') ?></a></li>
                          <li class="active"><a href="<?php echo $this->url('signup') ?>"><?php echo $this->translate('SignUp') ?></a></li>
+                         
+                        <?php }else{ ?>
+                        
+                          <li class="active"><a href="<?php echo $this->url('logout') ?>"><?php echo $this->translate('LogOut') ?></a></li>
+                          <li class="active"><a href="<?php echo $this->url('logout') ?>"><?php echo $this->translate('my Wish List') ?></a></li>
+                          <li class="active"><a href="<?php echo $this->url('device') ?>"><?php echo $this->translate('Paper') ?></a></li>
+                        <?php } ?>
                                          </ul>
                 </div><!--/.nav-collapse -->
             </div>
