--- a/module/Device/view/device/device/delete.phtml
+++ b/module/Device/view/device/device/delete.phtml
@@ -7,8 +7,8 @@
  <h1><?php echo $this->escapeHtml($title); ?></h1>
 
  <p>Are you sure that you want to delete
-     '<?php echo $this->escapeHtml($device->nom_produit); ?>' who is a/an
-     '<?php echo $this->escapeHtml($device->type); ?>'?
+     '<?php echo $this->escapeHtml($device->titre); ?>' from
+     '<?php echo $this->escapeHtml($device->journal); ?>'?
  </p>
  <?php
  $url = $this->url('device', array(
