--- a/module/Device/view/device/device/edit.phtml
+++ b/module/Device/view/device/device/edit.phtml
@@ -1,6 +1,6 @@
 <?php
 
- $title = 'Edit device';
+ $title = 'Edit Paper';
  $this->headTitle($title);
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
@@ -18,9 +18,10 @@
 
  echo $this->form()->openTag($form);
  echo $this->formHidden($form->get('id'));
- echo $this->formRow($form->get('nom_produit'));
- echo $this->formRow($form->get('type')); 
- echo $this->formRow($form->get('en_marche'));
- echo $this->formRow($form->get('image'));
+ echo $this->formRow($form->get('titre'));
+ echo $this->formRow($form->get('theme')); 
+ echo $this->formRow($form->get('lien'));
+ echo $this->formRow($form->get('journal'));
+  echo $this->formRow($form->get('user_id'));
  echo $this->formSubmit($form->get('submit'));
  echo $this->form()->closeTag();
