--- a/module/Wish_List/view/wish_list/wish_list/index.phtml
+++ b/module/Wish_List/view/wish_list/wish_list/index.phtml
@@ -27,7 +27,7 @@ $this->headTitle($title);
 
             <th>&nbsp;</th>
         </tr>
-        <?php foreach ($wishlists as $wishlist) : ?>
+        <?php foreach ($wish_lists as $wishlist) : ?>
             <tr>
                 <td><?php echo $this->escapeHtml($wishlist->id);?></td>
                 <td><?php echo $this->escapeHtml($wishlist->titre);?></td>
