--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -61,7 +61,7 @@ echo $this->doctype();
                         <?php }else{ ?>
                         
                           <li class="active"><a href="<?php echo $this->url('logout') ?>"><?php echo $this->translate('LogOut') ?></a></li>
-                          <li class="active"><a href="<?php echo $this->url('wish_list') ?>"><?php echo $this->translate('my Wish List') ?></a></li>
+                          <li class="active"><a href="<?php echo $this->url('wish') ?>"><?php echo $this->translate('my Wish List') ?></a></li>
                           <li class="active"><a href="<?php echo $this->url('device') ?>"><?php echo $this->translate('Paper') ?></a></li>
                         <?php } ?>
                                          </ul>
