--- a/module/Wish/view/wish/wish/delete.phtml
+++ b/module/Wish/view/wish/wish/delete.phtml
@@ -12,17 +12,17 @@ $this->headTitle($title);
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 
 <p>Are you sure that you want to delete
-    '<?php echo $this->escapeHtml($wishlist->titre); ?>' from your wish_list
+    '<?php echo $this->escapeHtml($wish->titre); ?>' from your wish_list
 </p>
 <?php
-$url = $this->url('wish_list', array(
+$url = $this->url('wish', array(
     'action' => 'delete',
     'id'     => $this->id,
 ));
 ?>
 <form action="<?php echo $url; ?>" method="post">
     <div>
-        <input type="hidden" name="id" value="<?php echo (int) $wishlist->id; ?>" />
+        <input type="hidden" name="id" value="<?php echo (int) $wish->id; ?>" />
         <input type="submit" name="del" value="Yes" />
         <input type="submit" name="del" value="No" />
     </div>
