--- a/module/Device/view/device/device/index.phtml
+++ b/module/Device/view/device/device/index.phtml
@@ -30,8 +30,8 @@ $session = new Container('User');
      <td><?php echo $this->escapeHtml($device->theme);?></td>
      <td><?php echo $this->escapeHtml($device->lien);?></td>
      <td><?php echo $this->escapeHtml($device->journal);?></td>
-     <td><a href="<?php echo $this->url('device',
-             array('action'=>'addwish', 'id' => $device->id));?>">Add me</td>
+     <td><a href="<?php echo $this->url('wish',
+             array('action'=>'addWish', 'id' => $device->id));?>">Add me</td>
      <td>
       <?php if($session->email == "admin@admin.fr"){ 
           print $session->is_admin; ?>
