--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,7 +1,5 @@
-<div class="jumbotron">
-    <h1><?php echo sprintf($this->translate('Bienvenue sur votre Application Article_to_read'), '<span class="zf-blue">', '</span>') ?></h1>
-   
-</div>
-<div class="row">
-<img src="<?php echo $this->basePath('img/logo-journal.jpg') ?>" alt="Zend Framework 2"/>
+<div class="logo">
+    <h1 class="logotitre"><?php echo sprintf($this->translate('Bienvenue sur votre Application Article to read'), '<span class="zf-blue">', '</span>') ?></h1>
+
+<img class="logoimage" src="<?php echo $this->basePath('img/logo.png') ?>" alt="Zend Framework 2"/>
 </div>
