--- a/module/Auth/view/auth/auth/signup.phtml
+++ b/module/Auth/view/auth/auth/signup.phtml
@@ -28,7 +28,7 @@ if (count($flashMessage)) :
     echo $this->form()->openTag($form);
     ?>
     <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
-        <h2 class="mdl-card__title-text">Sign Up</h2>
+        <h2 class="form_titre">Sign Up</h2>
     </div>
     <div class="mdl-card__supporting-text">
 
