--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,11 +13,12 @@ body {
 }
 .logotitre
 {
-    left : 10%;
+    left : 5%;
     position: relative;
     font-style: normal;
-    font-family: Broadway;
-    color: cornflowerblue;
+    font-family: Cambria;
+    font-size: 14px;
+    color: #337ab7;
 }
 .logoimage
 {
@@ -25,15 +26,80 @@ body {
     position: relative;
 }
 
+.password_label
+{
+    font-size: medium;
+    font-family: Cambria;
+    color : #337ab7;
+
+}
+
+.emaillabel
+{
+
+    font-size: medium;
+    font-family: Cambria;
+    color : #337ab7;
+}
+
+.email_input
+{
+    display: block;
+    width: 100%;
+    height: 38px;
+    margin-top: 2px;
+    font-weight: 500;
+    background: none;
+    border: 0;
+    border-bottom: 1px solid #d8d8d8;
+}
+.email_input:focus {
+    border-color: #1e9ce6;
+    outline: 0;
+
+}
+
+.logonav
+{
+    position: absolute;
+    left: 45%;
+    font-size: 30px;
+    font-family: Cambria;
+    color : #337ab7;
+}
+
+.form_titre
+{
+
+    font-family: Cambria;
+    color : #337ab7;
+}
+
+.pssw_input
+{
+    display: block;
+    width: 100%;
+    height: 38px;
+    margin-top: 2px;
+    font-weight: 500;
+    background: none;
+    border: 0;
+    border-bottom: 1px solid #d8d8d8;
+}
+.pssw_input:focus {
+    border-color: #1e9ce6;
+    outline: 0;
+
+}
 .btn-success {
-  background-color: #57a900;
-  background-image: -moz-linear-gradient(top, #70d900, #57a900);
-  background-image: -ms-linear-gradient(top, #70d900, #57a900);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#70d900), to(#57a900));
-  background-image: -webkit-linear-gradient(top, #70d900, #57a900);
-  background-image: -o-linear-gradient(top, #70d900, #57a900);
-  background-image: linear-gradient(top, #70d900, #57a900);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70d900', endColorstr='#57a900', GradientType=0);
+    background-color: #57a900;
+    background-image: -moz-linear-gradient(top, #70d900, #57a900);
+    background-image: -ms-linear-gradient(top, #70d900, #57a900);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#70d900), to(#57a900));
+    background-image: -webkit-linear-gradient(top, #70d900, #57a900);
+    background-image: -o-linear-gradient(top, #70d900, #57a900);
+    background-image: linear-gradient(top, #70d900, #57a900);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70d900', endColorstr='#57a900', GradientType=0);
 }
 
 .btn-success:hover,
@@ -41,11 +107,11 @@ body {
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #57a900;
+    background-color: #57a900;
 }
 
 .btn-success:active, .btn-success.active {
-  background-color: #57a900;
+    background-color: #57a900;
 }
 
 div.container a.brand {
