--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -10,7 +10,7 @@ echo $this->doctype();
 ?>
 
 <div class="logo">
-    <h1 class="logotitre"><?php echo sprintf($this->translate('Bienvenue sur votre Application Article to read'), '<span class="zf-blue">', '</span>') ?></h1>
+    <h1 class="logotitre"><?php echo sprintf($this->translate('Welcome on your  Application Article to read'), '<span class="zf-blue">', '</span>') ?></h1>
 
    <img class="logoimage" src="<?php echo $this->basePath('img/logo.png') ?>" alt="Zend Framework 2"/>
     </div>
@@ -25,7 +25,6 @@ echo $this->doctype();
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
